added 9:00 time box

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,6 +30,10 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <!-- bootstrap, added border, text floated to right with reverse flex, removed left border to match assignment-->
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">9AM
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
