added other times

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,8 +32,42 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <!-- bootstrap, added border, text floated to right with reverse flex, removed left border to match assignment-->
-        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">9AM
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+            9AM
         </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          10AM
+        </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          11AM
+        </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          12AM
+        </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          1PM
+        </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          2PM
+        </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          3PM
+        </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          4PM
+        </div>
+
+        <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
+          5PM
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
