added more divs to put each time on it's own line

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,38 +35,65 @@
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
             9AM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           10AM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           11AM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           12PM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           1PM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           2PM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           3PM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           4PM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           5PM
         </div>
+        <div 
+        class="col-9">
+      </div>
 
     </div>
 
