--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,64 +36,110 @@
             9AM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <!--info turns box blue, style makes button cover whole div-->
+          <button class="bg-info" style="width:100%; height:100%"             class="saveBtn">
+          Save
+          </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           10AM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%"   class="saveBtn">
+          Save
+          </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           11AM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
+          Save
+        </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           12PM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
+          Save
+          </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           1PM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
+          Save
+          </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           2PM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
+          Save
+          </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           3PM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
+          Save
+          </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           4PM
         </div>
         <div 
-        class="col-9">
-      </div>
+          class="col-9">
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
+          Save
+          </button>
+        </div>
 
         <div class="col-2 border border-left-0 d-flex align-items-center flex-row-reverse">
           5PM
         </div>
         <div 
         class="col-9">
-      </div>
+        </div>
+        <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
+          <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
+          Save
+          </button>
+        </div>
 
     </div>
 
