added grey to middle boxes to make them look like actual boxes

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,7 +36,7 @@
             9AM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <!--info turns box blue, style makes button cover whole div-->
@@ -49,7 +49,7 @@
           10AM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%"   class="saveBtn">
@@ -61,7 +61,7 @@
           11AM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -73,7 +73,7 @@
           12PM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -85,7 +85,7 @@
           1PM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -97,7 +97,7 @@
           2PM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -109,7 +109,7 @@
           3PM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -121,7 +121,7 @@
           4PM
         </div>
         <div 
-          class="col-9">
+          class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -133,7 +133,7 @@
           5PM
         </div>
         <div 
-        class="col-9">
+        class="col-9 bg-secondary border border-light" >
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
