converted them into text boxes

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,7 +36,8 @@
             9AM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <!--info turns box blue, style makes button cover whole div-->
@@ -49,7 +50,8 @@
           10AM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%"   class="saveBtn">
@@ -61,7 +63,8 @@
           11AM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -73,7 +76,8 @@
           12PM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -85,7 +89,8 @@
           1PM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -97,7 +102,8 @@
           2PM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -109,7 +115,8 @@
           3PM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -121,7 +128,8 @@
           4PM
         </div>
         <div 
-          class="col-9 bg-secondary border border-light" >
+          class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+          <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
@@ -133,7 +141,8 @@
           5PM
         </div>
         <div 
-        class="col-9 bg-secondary border border-light" >
+        class="col-9 bg-secondary border border-light d-flex align-items-center flex-row" >
+        <input type="text" style="width:100%; height:100%">
         </div>
         <div class="col-1 bg-info d-flex align-items-center justify-content-center" style="padding:0">
           <button class="bg-info" style="width:100%; height:100%" class="saveBtn">
